# console-cowboy

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ctec.schema.json  distill.yml  iterm2-color-scheme.schema.json  lefthook.yml  mise.toml  pyproject.toml  release-please-config.json
.claude/agents/: alacritty-advocate-reviewer.md  ghostty-advocate-reviewer.md  iterm2-config-advocate.md  kitty-power-user-reviewer.md  terminal-app-advocate-reviewer.md  terminal-novice-reviewer.md  wezterm-advocate-reviewer.md
.claude/commands/: docs.md
.gemini/commands/: docs.toml
.github/workflows/: distill.yml  gemini-review.yml  gemini-review.yml.disabled  publish.yml  release-please.yml  test.yml
console_cowboy/: cli.py  validation.py
console_cowboy/ctec/: __init__.py  schema.py  serializers.py
console_cowboy/terminals/: __init__.py  alacritty.py  base.py  ghostty.py  iterm2.py  kitty.py  mixins.py  terminal_app.py  vscode.py  wezterm.py
console_cowboy/terminals/alacritty/: __init__.py  adapter.py
console_cowboy/terminals/ghostty/: __init__.py  adapter.py
console_cowboy/terminals/hyper/: __init__.py  adapter.py  javascript.py
console_cowboy/terminals/iterm2/: __init__.py  adapter.py
console_cowboy/terminals/kitty/: __init__.py  adapter.py
console_cowboy/terminals/terminal_app/: __init__.py  adapter.py
console_cowboy/terminals/vscode/: __init__.py  adapter.py
console_cowboy/terminals/wezterm/: __init__.py  adapter.py  lua.py
console_cowboy/utils/: __init__.py  colors.py  font_registry.py  fonts.py  keycodes.py  nsarchive.py
scripts/: build_knowledge_base.py  generate_schemas.py
tests/: conftest.py  test_alacritty.py  test_console_cowboy.py  test_cross_terminal.py  test_ctec_schema.py  test_environment.py  test_font_fixes.py  test_font_registry.py  test_fonts.py  test_ghostty.py  test_hyper.py  test_iterm2.py  test_key_bindings.py  test_keycodes.py  test_kitty.py  test_serializers.py  test_tabs_panes.py  test_terminal_app.py  test_terminal_registry.py  test_terminals.py  test_text_hints.py  test_validation.py  test_vscode.py  test_wezterm.py
tests/fixtures/alacritty/: alacritty.toml  alacritty.yml
tests/fixtures/ctec/: complete.toml  complete.yaml  minimal.toml  minimal.yaml
tests/fixtures/ghostty/: config
tests/fixtures/hyper/: .hyper.js
tests/fixtures/iterm2/: com.googlecode.iterm2.plist
tests/fixtures/kitty/: kitty.conf
tests/fixtures/terminal_app/: Basic.terminal  com.apple.Terminal.plist
tests/fixtures/vscode/: settings.json
tests/fixtures/wezterm/: wezterm.lua
