[project]
name = "console-cowboy"
version = "0.1.2"
description = "Hop terminals like you hop linux distributions."
readme = "README.md"
authors = [{name = "zetlen"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click",
    "pyyaml>=6.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/zetlen/console-cowboy"
Changelog = "https://github.com/zetlen/console-cowboy/blob/main/CHANGELOG.md"
Issues = "https://github.com/zetlen/console-cowboy/issues"
CI = "https://github.com/zetlen/console-cowboy/actions"

[project.scripts]
console-cowboy = "console_cowboy.cli:cli"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["console_cowboy", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["console_cowboy"]

[tool.ruff.lint.per-file-ignores]
"console_cowboy/cli.py" = ["B904"]  # Exception chaining not needed for CLI user errors
"scripts/*" = ["E402"]  # Scripts need to modify sys.path before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "build>=1.0",
    "commitizen>=4.0",
    "lefthook>=2.0.15",
    "pytest",
    "pytest-cov",
    "ruff>=0.4",
    "twine>=6.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = false  # release-please handles changelog
